--- a/ImagePullBackOff/private_repo_deployment.yml
+++ b/ImagePullBackOff/private_repo_deployment.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: daryladriene/crashloop-test:v2    # Invalid image version
+        image: daryladriene/crashloop-test:v2    # Private repo
         ports:
         - containerPort: 80
       imagePullSecrets:
